force-app/main/default/objects/AtribuicaoLeads__mdt/AtribuicaoLeads__mdt.object-meta.xml
<CustomObject>
    <label>Atribuição de Lead</label>
    <pluralLabel>Atribuição de Leads</pluralLabel>
</CustomObject>