force-app/main/default/objects/AtribuicaoLeads__mdt/fields/IdFila__c.field-meta.xml
<CustomField>
    <fullName>IdFila__c</fullName>
    <label>Id Fila</label>
    <length>20</length>
    <type>Text</type>
</CustomField>