force-app/main/default/objects/AtribuicaoLeads__mdt/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <label>Letra</label>
    <length>1</length>
    <type>Text</type>
</CustomField>