force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MaxScore__c.field-meta.xml
<CustomField>
    <fullName>MaxScore__c</fullName>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>