force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MaxScoreFinal__c.field-meta.xml
<CustomField>
    <fullName>MaxScoreFinal__c</fullName>
    <label>MaxScoreFinal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>