force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MaxScoreFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>MaxScoreFinanceiro__c</fullName>
    <label>MaxScoreFinanceiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>