force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MinScore__c.field-meta.xml
<CustomField>
    <fullName>MinScore__c</fullName>
    <label>MinScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>