force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MinScoreFinal__c.field-meta.xml
<CustomField>
    <fullName>MinScoreFinal__c</fullName>
    <label>MinScoreFinal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>