force-app/main/default/objects/AtribuicaoLeads__mdt/fields/MinScoreFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>MinScoreFinanceiro__c</fullName>
    <label>MinScoreFinanceiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>