force-app/main/default/objects/AtribuicaoLeads__mdt/fields/ValueScoreFin__c.field-meta.xml
<CustomField>
    <fullName>ValueScoreFin__c</fullName>
    <label>ValueScoreFin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>